# tagline

./: README.md  context.md  my_changelog_since_1.7.0.md  pyproject.toml  requirements.txt
.github/workflows/: deploy_changelog.yml
src/changelog_generator/: .env  cli.py  github_client.py  llm_handler.py  processor.py
src/changelog_generator/templates/: changelog_system_prompt.md  changelog_user_prompt.md
tests/: test_e2e.py  test_github_client.py
